--- a/WebApplication2/appsettings.json
+++ b/WebApplication2/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=aris-cc.com;Database=arisccco_vpn;User=arisccco_andrianiavo;Password='Niavo jr171102!;'"
+    "DefaultConnection": "Host=aris-cc.com;Database=arisccco_vpn;Username=arisccco_andrianiavo;Password=Niavo jr171102!;"
   },
   "Jwt": {
     "Key": "jhgwsqwuyz_qvbqud-dsqbpolmsq_sqdqsd-sqsnaoi",
